--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -1,24 +1,8 @@
 <html>
-
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>{{ page.title }} | Twin Creeks Homeowners Association</title>
-<link rel="stylesheet" type="text/css" href="include/style.css">
-<meta name="GENERATOR" content="Microsoft FrontPage 6.0">
-<meta name="ProgId" content="FrontPage.Editor.Document">
-<link rel="File-List" href="Board_files/filelist.xml">
-
-<!--[if !mso]>
-<style>
-v\:*         { behavior: url(#default#VML) }
-o\:*         { behavior: url(#default#VML) }
-.shape       { behavior: url(#default#VML) }
-</style>
-<![endif]-->
-<!--[if gte mso 9]>
-<xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
-</xml><![endif]-->
-<meta name="Microsoft Theme" content="ice174 010, default">
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<title>{{ page.title }} | Twin Creeks Homeowners Association</title>
+	<link rel="stylesheet" type="text/css" href="include/style.css">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000" link="#339933" vlink="#996600" alink="#CC9900">
@@ -26,42 +10,9 @@ o\:*         { behavior: url(#default#VML) }
 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699">
 	<tr>
 		<td width="71%">
-		<p>&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112"><!--[if gte vml 1]><v:shapetype id="_x0000_t136"
- coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
- <v:formulas>
-  <v:f eqn="sum #0 0 10800"/>
-  <v:f eqn="prod #0 2 1"/>
-  <v:f eqn="sum 21600 0 @1"/>
-  <v:f eqn="sum 0 0 @2"/>
-  <v:f eqn="sum 21600 0 @3"/>
-  <v:f eqn="if @0 @3 0"/>
-  <v:f eqn="if @0 21600 @1"/>
-  <v:f eqn="if @0 0 @2"/>
-  <v:f eqn="if @0 @4 21600"/>
-  <v:f eqn="mid @5 @6"/>
-  <v:f eqn="mid @8 @5"/>
-  <v:f eqn="mid @7 @8"/>
-  <v:f eqn="mid @6 @7"/>
-  <v:f eqn="sum @6 0 @5"/>
- </v:formulas>
- <v:path textpathok="t" o:connecttype="custom" o:connectlocs="@9,0;@10,10800;@11,21600;@12,10800"
-  o:connectangles="270,180,90,0"/>
- <v:textpath on="t" fitshape="t"/>
- <v:handles>
-  <v:h position="#0,bottomRight" xrange="6629,14971"/>
- </v:handles>
- <o:lock v:ext="edit" text="t" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1025" type="#_x0000_t136" alt="Homeowners Association"
- style='width:372pt;height:38.25pt' fillcolor="#ccecff" stroked="f">
- <v:fill src="Board_files/image001.jpg" o:title="Blue tissue paper" rotate="t"
-  type="tile"/>
- <v:imagedata embosscolor="shadow add(51)"/>
- <v:shadow on="t" type="emboss" color="black" color2="shadow add(102)"
-  offset="1pt,1pt"/>
- <v:textpath style='font-family:"Perpetua";font-weight:bold;font-style:italic;
-  v-text-kern:t' trim="t" fitpath="t" string="Homeowners Association"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=500 height=55
-src="Board_files/image002.gif" alt="Homeowners Association" v:shapes="_x0000_s1025"><![endif]></p>
+		<p>&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112">
+			<img border=0 width=500 height=55 src="Board_files/image002.gif" alt="Homeowners Association" v:shapes="_x0000_s1025">
+		</p>
 		</td>
 		<td align="right">
 		&nbsp;</td>
@@ -71,21 +22,21 @@ src="Board_files/image002.gif" alt="Homeowners Association" v:shapes="_x0000_s10
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td bgcolor="#336699">&nbsp;</td>
-		<td bgcolor="#336699" height="26" align="center">
-		<!--webbot bot="Navigation" s-orientation="horizontal" s-rendering="graphics" s-type="global" b-include-home="FALSE" b-include-up="FALSE" startspan --><!--webbot bot="Navigation" i-checksum="0" endspan --></td>
+		<td bgcolor="#336699" height="26" align="center"></td>
 		<td bgcolor="#336699">&nbsp;</td>
 	</tr>
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td><img border="0" src="images/corner1.gif" width="22" height="28"></td>
 		<td class="banner" height="26" background="images/topbg.gif">
-		<!--webbot bot="Navigation" s-type="banner" s-orientation="horizontal" s-rendering="graphics" startspan --><img src="fp_derived/Board.htm_cmp_ice174010_bnr.gif" width="300" height="19" border="0" alt="Board Members"><!--webbot bot="Navigation" i-checksum="30484" endspan --></td>
+			{{ page.title }}
+			</td>
 		<td><img border="0" src="images/corner2.gif" width="28" height="28"></td>
 	</tr>
 	<tr>
 		<td class="leftcolumn" valign="top" bgcolor="#336699">
 		<p align="center">
-		<!--webbot bot="Navigation" s-orientation="vertical" s-rendering="graphics" s-type="top" b-include-home="TRUE" b-include-up="FALSE" startspan --><script language="JavaScript"><!--
+		<script language="JavaScript"><!--
 MSFPhover = 
   (((navigator.appName == "Netscape") && 
   (parseInt(navigator.appVersion) >= 3 )) || 
@@ -136,16 +87,26 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 		<td bgcolor="#336699">&nbsp;</td>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td height="26" bgcolor="#336699" align="center"><font color="#FFFFFF">
-		<!--webbot bot="Include" u-include="include/copyright.htm" tag="BODY" startspan -->
 
 <p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 </font>
-
-<!--webbot bot="Include" i-checksum="474" endspan --></font></td>
 		<td bgcolor="#336699">&nbsp;</td>
 	</tr>
 </table>
 
-</body>
+<script type="text/javascript">
 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38441328-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+</body>
 </html>
