--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -36,16 +36,16 @@
 	<tr>
 		<td class="leftcolumn" valign="top" bgcolor="#336699">
 		<p align="center">
-			<a href="/" rel="home"><img src="fp_derived/home_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Home" name="MSFPnav1"></a><br>
-			<a href="About%20Us.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav2'].src=MSFPnav2h.src" onmouseout="if(MSFPhover) document['MSFPnav2'].src=MSFPnav2n.src"><img src="fp_derived/About%20Us.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="About Us" name="MSFPnav2"></a><br><img src="fp_derived/Board.htm_cmp_ice174010_vbtn_p.gif" width="147" height="31" border="0" alt="Board Members"><br>
-			<a href="services.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav3'].src=MSFPnav3h.src" onmouseout="if(MSFPhover) document['MSFPnav3'].src=MSFPnav3n.src"><img src="fp_derived/services.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Minutes &amp; Bylaws" name="MSFPnav3"></a><br>
-			<a href="Newsletters.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav4'].src=MSFPnav4h.src" onmouseout="if(MSFPhover) document['MSFPnav4'].src=MSFPnav4n.src"><img src="fp_derived/Newsletters.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Newsletters" name="MSFPnav4"></a><br>
-			<a href="Crime%20Watch.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav5'].src=MSFPnav5h.src" onmouseout="if(MSFPhover) document['MSFPnav5'].src=MSFPnav5n.src"><img src="fp_derived/Crime%20Watch.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Crime Watch" name="MSFPnav5"></a><br>
-			<a href="New%20Residents.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav6'].src=MSFPnav6h.src" onmouseout="if(MSFPhover) document['MSFPnav6'].src=MSFPnav6n.src"><img src="fp_derived/New%20Residents.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="New Residents" name="MSFPnav6"></a><br>
-			<a href="Resources.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav7'].src=MSFPnav7h.src" onmouseout="if(MSFPhover) document['MSFPnav7'].src=MSFPnav7n.src"><img src="fp_derived/Resources.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Resources" name="MSFPnav7"></a><br>
-			<a href="Events.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav8'].src=MSFPnav8h.src" onmouseout="if(MSFPhover) document['MSFPnav8'].src=MSFPnav8n.src"><img src="fp_derived/Events.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Events" name="MSFPnav8"></a><br>
-			<a href="Registration%20Page.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav9'].src=MSFPnav9h.src" onmouseout="if(MSFPhover) document['MSFPnav9'].src=MSFPnav9n.src"><img src="fp_derived/Registration%20Page.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="Registration Page" name="MSFPnav9"></a><br>
-			<a href="Twin%20Creeks%20faq.htm" language="JavaScript" onmouseover="if(MSFPhover) document['MSFPnav10'].src=MSFPnav10h.src" onmouseout="if(MSFPhover) document['MSFPnav10'].src=MSFPnav10n.src"><img src="fp_derived/Twin%20Creeks%20faq.htm_cmp_ice174010_vbtn.gif" width="147" height="31" border="0" alt="FAQ" name="MSFPnav10"></a>
+			<a href="/" rel="home"><img src="fp_derived/home_cmp_ice174010_vbtn{% if page.category == 'home' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Home" name="MSFPnav1"></a><br>
+			<a href="About%20Us.htm"><img src="fp_derived/About%20Us.htm_cmp_ice174010_vbtn{% if page.category == 'about' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="About Us" name="MSFPnav2"></a><br><img src="fp_derived/Board.htm_cmp_ice174010_vbtn{% if page.category == 'board' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Board Members"><br>
+			<a href="services.htm"><img src="fp_derived/services.htm_cmp_ice174010_vbtn{% if page.category == 'services' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Minutes &amp; Bylaws" name="MSFPnav3"></a><br>
+			<a href="Newsletters.htm"><img src="fp_derived/Newsletters.htm_cmp_ice174010_vbtn{% if page.category == 'newsletters' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Newsletters" name="MSFPnav4"></a><br>
+			<a href="Crime%20Watch.htm"><img src="fp_derived/Crime%20Watch.htm_cmp_ice174010_vbtn{% if page.category == 'crime-watch' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Crime Watch" name="MSFPnav5"></a><br>
+			<a href="New%20Residents.htm"><img src="fp_derived/New%20Residents.htm_cmp_ice174010_vbtn{% if page.category == 'new-residents' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="New Residents" name="MSFPnav6"></a><br>
+			<a href="Resources.htm"><img src="fp_derived/Resources.htm_cmp_ice174010_vbtn{% if page.category == 'resources' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Resources" name="MSFPnav7"></a><br>
+			<a href="Events.htm"><img src="fp_derived/Events.htm_cmp_ice174010_vbtn{% if page.category == 'events' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Events" name="MSFPnav8"></a><br>
+			<a href="Registration%20Page.htm"><img src="fp_derived/Registration%20Page.htm_cmp_ice174010_vbtn{% if page.category == 'registration' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Registration Page" name="MSFPnav9"></a><br>
+			<a href="Twin%20Creeks%20faq.htm"><img src="fp_derived/Twin%20Creeks%20faq.htm_cmp_ice174010_vbtn{% if page.category == 'faq' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="FAQ" name="MSFPnav10"></a>
 		</p>
 		<p>&nbsp;</p>
 		</td>
@@ -66,9 +66,8 @@
 		<td bgcolor="#336699">&nbsp;</td>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td height="26" bgcolor="#336699" align="center"><font color="#FFFFFF">
-
-<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
-</font>
+			<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
+		</font>
 		<td bgcolor="#336699">&nbsp;</td>
 	</tr>
 </table>
