Adding new templated 'about us' page.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -37,7 +37,8 @@
 		<td class="leftcolumn" valign="top" bgcolor="#336699">
 		<p align="center">
 			<a href="/" rel="home"><img src="fp_derived/home_cmp_ice174010_vbtn{% if page.category == 'home' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Home" name="MSFPnav1"></a><br>
-			<a href="About%20Us.htm"><img src="fp_derived/About%20Us.htm_cmp_ice174010_vbtn{% if page.category == 'about' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="About Us" name="MSFPnav2"></a><br><img src="fp_derived/Board.htm_cmp_ice174010_vbtn{% if page.category == 'board' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Board Members"><br>
+			<a href="about.html"><img src="fp_derived/About%20Us.htm_cmp_ice174010_vbtn{% if page.category == 'about' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="About Us" name="MSFPnav2"></a><br>
+			<a href="board.html"><img src="fp_derived/Board.htm_cmp_ice174010_vbtn{% if page.category == 'board' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Board Members"></a><br>
 			<a href="services.htm"><img src="fp_derived/services.htm_cmp_ice174010_vbtn{% if page.category == 'services' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Minutes &amp; Bylaws" name="MSFPnav3"></a><br>
 			<a href="Newsletters.htm"><img src="fp_derived/Newsletters.htm_cmp_ice174010_vbtn{% if page.category == 'newsletters' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Newsletters" name="MSFPnav4"></a><br>
 			<a href="Crime%20Watch.htm"><img src="fp_derived/Crime%20Watch.htm_cmp_ice174010_vbtn{% if page.category == 'crime-watch' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Crime Watch" name="MSFPnav5"></a><br>
