Adding templated FAQ page.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -46,7 +46,7 @@
 			<a href="Resources.htm"><img src="fp_derived/Resources.htm_cmp_ice174010_vbtn{% if page.category == 'resources' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Resources" name="MSFPnav7"></a><br>
 			<a href="Events.htm"><img src="fp_derived/Events.htm_cmp_ice174010_vbtn{% if page.category == 'events' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Events" name="MSFPnav8"></a><br>
 			<a href="Registration%20Page.htm"><img src="fp_derived/Registration%20Page.htm_cmp_ice174010_vbtn{% if page.category == 'registration' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Registration Page" name="MSFPnav9"></a><br>
-			<a href="Twin%20Creeks%20faq.htm"><img src="fp_derived/Twin%20Creeks%20faq.htm_cmp_ice174010_vbtn{% if page.category == 'faq' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="FAQ" name="MSFPnav10"></a>
+			<a href="faq.html"><img src="fp_derived/Twin%20Creeks%20faq.htm_cmp_ice174010_vbtn{% if page.category == 'faq' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="FAQ" name="MSFPnav10"></a>
 		</p>
 		<p>&nbsp;</p>
 		</td>
