Templating Crime Watch and Newsletters.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -40,8 +40,8 @@
 			<a href="about.html"><img src="fp_derived/About%20Us.htm_cmp_ice174010_vbtn{% if page.category == 'about' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="About Us" name="MSFPnav2"></a><br>
 			<a href="board.html"><img src="fp_derived/Board.htm_cmp_ice174010_vbtn{% if page.category == 'board' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Board Members"></a><br>
 			<a href="services.htm"><img src="fp_derived/services.htm_cmp_ice174010_vbtn{% if page.category == 'services' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Minutes &amp; Bylaws" name="MSFPnav3"></a><br>
-			<a href="Newsletters.htm"><img src="fp_derived/Newsletters.htm_cmp_ice174010_vbtn{% if page.category == 'newsletters' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Newsletters" name="MSFPnav4"></a><br>
-			<a href="Crime%20Watch.htm"><img src="fp_derived/Crime%20Watch.htm_cmp_ice174010_vbtn{% if page.category == 'crime-watch' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Crime Watch" name="MSFPnav5"></a><br>
+			<a href="newsletters.html"><img src="fp_derived/Newsletters.htm_cmp_ice174010_vbtn{% if page.category == 'newsletters' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Newsletters" name="MSFPnav4"></a><br>
+			<a href="crime-watch.html"><img src="fp_derived/Crime%20Watch.htm_cmp_ice174010_vbtn{% if page.category == 'crime-watch' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Crime Watch" name="MSFPnav5"></a><br>
 			<a href="new-residents.html"><img src="fp_derived/New%20Residents.htm_cmp_ice174010_vbtn{% if page.category == 'new-residents' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="New Residents" name="MSFPnav6"></a><br>
 			<a href="Resources.htm"><img src="fp_derived/Resources.htm_cmp_ice174010_vbtn{% if page.category == 'resources' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Resources" name="MSFPnav7"></a><br>
 			<a href="Events.htm"><img src="fp_derived/Events.htm_cmp_ice174010_vbtn{% if page.category == 'events' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Events" name="MSFPnav8"></a><br>
