--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>{{ page.title }} | Twin Creeks Homeowners Association</title>
+	<title>{% if page.title %}{{ page.title }} | {% endif %}Twin Creeks Homeowners Association | Indianapolis, IN</title>
 	<link rel="stylesheet" type="text/css" href="include/style.css">
 </head>
 
