--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -39,7 +39,7 @@
 			<a href="/" rel="home"><img src="fp_derived/home_cmp_ice174010_vbtn{% if page.category == 'home' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Home" name="MSFPnav1"></a><br>
 			<a href="about.html"><img src="fp_derived/About%20Us.htm_cmp_ice174010_vbtn{% if page.category == 'about' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="About Us" name="MSFPnav2"></a><br>
 			<a href="board.html"><img src="fp_derived/Board.htm_cmp_ice174010_vbtn{% if page.category == 'board' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Board Members"></a><br>
-			<a href="services.htm"><img src="fp_derived/services.htm_cmp_ice174010_vbtn{% if page.category == 'services' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Minutes &amp; Bylaws" name="MSFPnav3"></a><br>
+			<a href="minutes-bylaws.html"><img src="fp_derived/services.htm_cmp_ice174010_vbtn{% if page.category == 'minutes-bylaws' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Minutes &amp; Bylaws" name="MSFPnav3"></a><br>
 			<a href="newsletters.html"><img src="fp_derived/Newsletters.htm_cmp_ice174010_vbtn{% if page.category == 'newsletters' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Newsletters" name="MSFPnav4"></a><br>
 			<a href="crime-watch.html"><img src="fp_derived/Crime%20Watch.htm_cmp_ice174010_vbtn{% if page.category == 'crime-watch' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Crime Watch" name="MSFPnav5"></a><br>
 			<a href="new-residents.html"><img src="fp_derived/New%20Residents.htm_cmp_ice174010_vbtn{% if page.category == 'new-residents' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="New Residents" name="MSFPnav6"></a><br>
@@ -47,6 +47,13 @@
 			<a href="events.html"><img src="fp_derived/Events.htm_cmp_ice174010_vbtn{% if page.category == 'events' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Events" name="MSFPnav8"></a><br>
 			<a href="registration.html"><img src="fp_derived/Registration%20Page.htm_cmp_ice174010_vbtn{% if page.category == 'registration' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Registration Page" name="MSFPnav9"></a><br>
 			<a href="faq.html"><img src="fp_derived/Twin%20Creeks%20faq.htm_cmp_ice174010_vbtn{% if page.category == 'faq' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="FAQ" name="MSFPnav10"></a>
+		</p>
+		<p>&nbsp;</p>
+		<p align="center"><font color="#ABD2FE"><b>Our Services</b></font></p>
+		<p>&nbsp;</p>
+		<p align="center">
+			<a href="Covenants.htm"><img src="fp_derived/Covenants.htm_cmp_ice174010_vbtn{% if page.category == 'covenants' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Covenants" name="MSFPnav11"></a><br>
+			<a href="Bylaws.htm"><img src="fp_derived/Bylaws.htm_cmp_ice174010_vbtn{% if page.category == 'bylaws' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Bylaws" name="MSFPnav12"></a>
 		</p>
 		<p>&nbsp;</p>
 		</td>
