Tempatizing Bylaws and Covenants pages.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -52,8 +52,8 @@
 		<p align="center"><font color="#ABD2FE"><b>Our Services</b></font></p>
 		<p>&nbsp;</p>
 		<p align="center">
-			<a href="Covenants.htm"><img src="fp_derived/Covenants.htm_cmp_ice174010_vbtn{% if page.category == 'covenants' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Covenants" name="MSFPnav11"></a><br>
-			<a href="Bylaws.htm"><img src="fp_derived/Bylaws.htm_cmp_ice174010_vbtn{% if page.category == 'bylaws' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Bylaws" name="MSFPnav12"></a>
+			<a href="covenants.html"><img src="fp_derived/Covenants.htm_cmp_ice174010_vbtn{% if page.category == 'covenants' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Covenants" name="MSFPnav11"></a><br>
+			<a href="bylaws.html"><img src="fp_derived/Bylaws.htm_cmp_ice174010_vbtn{% if page.category == 'bylaws' %}_p{% endif %}.gif" width="147" height="31" border="0" alt="Bylaws" name="MSFPnav12"></a>
 		</p>
 		<p>&nbsp;</p>
 		</td>
