--- a/include/style.css
+++ b/include/style.css
@@ -4,3 +4,35 @@ p, td  		{ font-family: Arial; font-size: 10pt; margin: 0 }
 .leftcolumn  	{padding-left: 2px; padding-right: 2px; color: #FFFFFF} 
 .banner			{padding-top: 4px; padding-left: 6px; color: #FFFFFF; font-size: 1.1em;}
 .newsbox	 	{ border: solid 1px #000000; padding: 3px}
+
+
+.header.banner
+{
+    text-align: center;
+}
+.header.banner h2
+{
+    color: #336699;
+    font-size: 1.9em;
+    
+    text-transform: uppercase;
+    font-style: italic;
+    
+    padding: 5px 20px;
+    margin: 5px;
+    
+    display: inline-block;    
+    border-bottom: 3px double #336699;
+}
+
+/* paragraph header */
+h3
+{
+    color: #336699;
+
+    text-transform: uppercase;
+    font-size: 1.2em;
+
+    margin-bottom: 2px;
+    padding-bottom: 0px;
+}
