Little bit of template cleanup.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -10,8 +10,8 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699">
 	<tr>
 		<td width="71%">
-		<p>&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112">
-			<img border=0 width=500 height=55 src="Board_files/image002.gif" alt="Homeowners Association" v:shapes="_x0000_s1025">
+		<p>&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112" alt="Twin Creeks">
+			<img border=0 width=500 height=55 src="Board_files/image002.gif" alt="Homeowners Association">
 		</p>
 		</td>
 		<td align="right">
@@ -27,11 +27,11 @@
 	</tr>
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
-		<td><img border="0" src="images/corner1.gif" width="22" height="28"></td>
+		<td><img border="0" src="images/corner1.gif" width="22" height="28" alt=""></td>
 		<td class="banner" height="26" background="images/topbg.gif">
 			{{ page.title }}
 			</td>
-		<td><img border="0" src="images/corner2.gif" width="28" height="28"></td>
+		<td><img border="0" src="images/corner2.gif" width="28" height="28" alt=""></td>
 	</tr>
 	<tr>
 		<td class="leftcolumn" valign="top" bgcolor="#336699">
@@ -65,17 +65,16 @@
 	</tr>
 	<tr>
 		<td bgcolor="#336699">
-		<img border="0" src="images/space.gif" width="167" height="1"></td>
-		<td><img border="0" src="images/corner3.gif" width="22" height="24"></td>
+		<img border="0" src="images/space.gif" width="167" height="1" alt=""></td>
+		<td><img border="0" src="images/corner3.gif" width="22" height="24" alt=""></td>
 		<td width="100%" background="images/btmbg.gif">&nbsp;</td>
-		<td><img border="0" src="images/corner4.gif" width="28" height="24"></td>
+		<td><img border="0" src="images/corner4.gif" width="28" height="24" alt=""></td>
 	</tr>
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td bgcolor="#336699">&nbsp;</td>
-		<td height="26" bgcolor="#336699" align="center"><font color="#FFFFFF">
-			<p><font face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
-		</font>
+		<td height="26" bgcolor="#336699" align="center">
+			<p><font color="#FFFFFF" face="Verdana" size="2">Copyright &copy; Twin Creeks Homeowners Association</font></p>
 		<td bgcolor="#336699">&nbsp;</td>
 	</tr>
 </table>
