--- a/include/style.css
+++ b/include/style.css
@@ -36,3 +36,29 @@ h3
     margin-bottom: 2px;
     padding-bottom: 0px;
 }
+
+
+
+dl.faq
+{
+    
+}
+dl.faq dt
+{
+    font-weight: bold;
+    color: #0000FF;
+    margin-top: 20px;
+}
+dl.faq dt:before
+{
+    font-family: 'BernhardMod BT', serif;
+    font-size: 1.3em;
+    content: 'Q.';
+    margin-right: 8px;
+}
+dl.faq dd
+{
+    margin-left: 0px;
+    padding-left: 0px;
+    margin: 10px 0px;
+}
