--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -10,7 +10,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699">
 	<tr>
 		<td width="71%">
-		<p>&nbsp;<img border="0" src="creek-for-web.gif" width="150" height="112" alt="Twin Creeks">
+		<p>&nbsp;<img border="0" src="images/twin-creeks.gif" width="150" height="112" alt="Twin Creeks">
 			<img border=0 width=500 height=55 src="Board_files/image002.gif" alt="Homeowners Association">
 		</p>
 		</td>
