homeowners association gif

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -11,7 +11,7 @@
 	<tr>
 		<td width="71%">
 		<p>&nbsp;<img border="0" src="images/twin-creeks.gif" width="150" height="112" alt="Twin Creeks">
-			<img border=0 width=500 height=55 src="Board_files/image002.gif" alt="Homeowners Association">
+			<img border=0 width=500 height=55 src="images/homeowners-association.gif" alt="Homeowners Association">
 		</p>
 		</td>
 		<td align="right">
