--- a/include/style.css
+++ b/include/style.css
@@ -5,7 +5,6 @@ p, td  		{ font-family: Arial; font-size: 10pt; margin: 0 }
 .banner			{padding-top: 4px; padding-left: 6px; color: #FFFFFF; font-size: 1.1em;}
 .newsbox	 	{ border: solid 1px #000000; padding: 3px}
 
-
 .header.banner
 {
     text-align: center;
@@ -15,29 +14,82 @@ p, td  		{ font-family: Arial; font-size: 10pt; margin: 0 }
     color: #336699;
     font-size: 1.9em;
     
-    text-transform: uppercase;
-    font-style: italic;
-    
     padding: 5px 20px;
     margin: 5px;
     
     display: inline-block;    
-    border-bottom: 3px double #336699;
+}
+
+a img
+{
+    border-width: 0px;
 }
 
 /* paragraph header */
-h3
+h3,
+h4
 {
     color: #336699;
 
-    text-transform: uppercase;
-    font-size: 1.2em;
+    font-size: 1.1em;
 
     margin-bottom: 2px;
     padding-bottom: 0px;
 }
+h3
+{
+    text-transform: uppercase;
+    font-size: 1.2em;
+}
 
+.homepage-column
+{    
+    width: 42%;
+    margin: 3%;
+    float: left;
+}
+.homepage-column:first-child
+{
+}
 
+table.layout
+{
+    border-width: 0px;
+    border-collapse: collapse;
+}
+
+td.homepage-column
+{
+    vertical-align: top;
+}
+
+.contain-floats:before, .contain-floats:after {
+    content: "";
+    display: table;
+}
+.contain-floats:after {
+    clear: both;
+}
+.contain-floats {
+}
+
+.homepage-column h3
+{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-transform: none;
+    color: white;
+    background-color: #336699;
+    padding: 10px;
+    text-align: center;
+}
+.homepage-column .section
+{
+    background-color: #ffffea;
+    padding: 10px;
+    border: 2px solid #336699;
+    margin-bottom: 10px;
+}
 
 dl.faq
 {
