Fixing some HTML errors.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -18,7 +18,7 @@
 		&nbsp;</td>
 	</tr>
 </table>
-<table border="0" cellpadding="0" cellspacing="0" width="100%" height="90%">
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td bgcolor="#336699">&nbsp;</td>
@@ -28,7 +28,7 @@
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
 		<td><img border="0" src="images/corner1.gif" width="22" height="28" alt=""></td>
-		<td class="banner" height="26" background="images/topbg.gif">
+		<td class="banner" height="26" style="background: url('images/topbg.gif') repeat-x;">
 			{{ page.title }}
 			</td>
 		<td><img border="0" src="images/corner2.gif" width="28" height="28" alt=""></td>
@@ -57,11 +57,11 @@
 		</p>
 		<p>&nbsp;</p>
 		</td>
-		<td background="images/leftbg.gif">&nbsp;</td>
+		<td style="background: url('images/leftbg.gif') repeat-y;">&nbsp;</td>
 		<td width="100%" height="100%" valign="top">
 			{{ content }}
 		</td>
-		<td background="images/rightbg.gif">&nbsp;</td>
+		<td style="background: url('images/rightbg.gif') repeat-y;">&nbsp;</td>
 	</tr>
 	<tr>
 		<td bgcolor="#336699">
