One more validation error.

--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -67,7 +67,7 @@
 		<td bgcolor="#336699">
 		<img border="0" src="images/space.gif" width="167" height="1" alt=""></td>
 		<td><img border="0" src="images/corner3.gif" width="22" height="24" alt=""></td>
-		<td width="100%" background="images/btmbg.gif">&nbsp;</td>
+		<td width="100%" style="background: url('images/btmbg.gif') repeat-x;">&nbsp;</td>
 		<td><img border="0" src="images/corner4.gif" width="28" height="24" alt=""></td>
 	</tr>
 	<tr>
