--- a/_layouts/inside.html
+++ b/_layouts/inside.html
@@ -7,17 +7,15 @@
 
 <body bgcolor="#FFFFFF" text="#000000" link="#339933" vlink="#996600" alink="#CC9900">
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#336699">
-	<tr>
-		<td width="71%">
-		<p>&nbsp;<img border="0" src="images/twin-creeks.gif" width="150" height="112" alt="Twin Creeks">
-			<img border=0 width=500 height=55 src="images/homeowners-association.gif" alt="Homeowners Association">
-		</p>
-		</td>
-		<td align="right">
-		&nbsp;</td>
-	</tr>
-</table>
+<div class="header global contain-floats vcard">
+	<img border="0" src="images/twin-creeks.gif" width="150" height="112" alt="Twin Creeks">
+
+	<div>
+		<div class="org">Twin Creeks Homeowners Association</div>
+		<div class="adr"><span class="locality">Indianapolis</span>, <span class="region">IN</span></div>
+	</div>
+</div>
+
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 	<tr>
 		<td bgcolor="#336699">&nbsp;</td>
