First round of cleanup on New Residents page.

--- a/include/style.css
+++ b/include/style.css
@@ -91,6 +91,12 @@ td.homepage-column
     margin-bottom: 10px;
 }
 
+dl.utilities dt
+{
+    color: #0000FF;
+    margin-top: 20px; 
+}
+
 dl.faq
 {
     
