--- a/include/style.css
+++ b/include/style.css
@@ -153,7 +153,7 @@ dl.events dt
 ul
 {
 	list-style-type: disc;
-	list-style-image: url('../fp_themes/ice174/blt.gif');
+	list-style-image: url('../images/blt.gif');
 }
 
 ol.winners
